# cpp-patterns

./: CMakeLists.txt  LICENSE  README.md
cmake/: cppPatternsConfig.cmake.in  cppPatternsConfigVersion.cmake.in
src/: CMakeLists.txt  cdpAbstractFactory.h  cppAbstractFactory.cpp  cppAbstractFactory.h  cppIterator.cpp  cppIterator.h  cppProxy.cpp  cppProxy.h
tst/: CMakeLists.txt
tst/creationalPatterns/: CMakeLists.txt  abstractFactoryTest.cpp  abstractFactoryTest.h  baseTemplate.cpp  baseTemplate.h
tst/structuralPatterns/: CMakeLists.txt  proxyTest.cpp  proxyTest.h
