## Version: $Id$
##
######################################################################
##
### Commentary:
##
######################################################################
##
### Change Log:
##
######################################################################
##
### Code:

project(structuralPatternsTest)

## ###################################################################
## Build tree setup
## ###################################################################

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

## ###################################################################
## Input
## ###################################################################

set(${PROJECT_NAME}_HEADERS
    proxyTest.h)

set(${PROJECT_NAME}_SOURCES
    proxyTest.cpp)

## ###################################################################
## Build rules
## ###################################################################

add_executable(
    ${PROJECT_NAME}
    ${${PROJECT_NAME}_SOURCES_TST}
    ${${PROJECT_NAME}_SOURCES})

## ###################################################################
## Link rules
## ###################################################################

qt5_use_modules(${PROJECT_NAME} Core)
qt5_use_modules(${PROJECT_NAME} Test)

target_link_libraries(${PROJECT_NAME} cppPatterns)

## ###################################################################
## Test rules
## ###################################################################

add_test(proxyTest ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME} proxyTest)

######################################################################
### CMakeLists.txt ends here
